agrego codigo_tarea.js

--- a/intro/index.html
+++ b/intro/index.html
@@ -29,9 +29,25 @@
     <div id="resultado_conteo"></div><br>
     <button onclick="imprimir_pares()">Resultado</button>
 
-
+    <hr>
+    <h1>MENÚ DEL DÍA</h1>
+    <form method="" action="">
+        <label for="seleccion">Selecionar plato</label>
+        <select name="Menu" id="menu">
+            <option>Selecionar</option>
+            <option value="ajiaco">Ajiaco</option>
+            <option value="bandeja_paisa">Bandeja paisa</option>
+            <option value="tamal">Tamal</option>
+            <option value="corrientazo">Corrientazo</option>
+            <option value="sanchocho_trifasico">Sancocho trifásico</option>
+        </select>
+        <div id="resultado_menu"></div><br>
+        <button onclick="orden_menu()">Ordenar</button>
+    </form>
 
     <script src="js/otro_codigo.js"></script>
+    <script src="js/codigo_tarea.js"></script>
+    
     
 </body>
 </html>
