--- a/Ejercicio3/index.html
+++ b/Ejercicio3/index.html
@@ -7,20 +7,40 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <section class="container">
+    <section class="container mt-4 text-center">
         <div class="row">
-            <div class="col-6">
-                <p>¿Cuántos números desea ingresar?</p>
+            <div class="col-3 mt-2 ">
+                <p>¿Cuántos números desea sumar?</p>
             </div>
             <div class="col-3">
-                <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+                <input type="number" class="form-control border-primary-subtle" placeholder="Ingrese cantidad" aria-label="Last name" id="cantidad">
             </div>
             <div class="col-3">
-                <button onclick="">Crear</button>
+                <select class="form-select border-primary-subtle" aria-label="Default select example" id="opcion">
+                    <option selected>Tipo de operación</option>
+                    <option value="1">Suma</option>
+                    <option value="2">Resta</option>
+                    <option value="3">Multiplicación</option>
+                    <option value="4">División</option>
+                  </select>
             </div>
+            <div class="col-3">
+                <button onclick="operacion()" type="button" class="btn btn-primary">Crear</button>
+            </div>
+
+            <div class="row mt-3" id="generar">
+                
+            </div>
+
         </div>    
     </section>
 
+    <section class="container mt-3"> 
+        <div>
+            <button onclick="operacion_matematica()" type="button" class="btn btn-primary">Realizar</button>
+            <div class="row mt-3" id="matematica"></div>
+        </div>
+    </section>
 
     <script src="js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
