--- a/Carrito_compras/index.html
+++ b/Carrito_compras/index.html
@@ -5,14 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compras</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 <body>
-    <h1>CARRITO DE COMPRAS</h1>
+    <h1 class="titulo_principal text-center">VEGETABLE MARKET</h1>
     
     <!-- Button trigger modal -->
-<button onclick="construir_carrito()" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<button onclick="construir_carrito()" type="button" class="btn btn-primary mx-4" data-bs-toggle="modal" data-bs-target="#exampleModal">
     &#128717;
-  </button>
+    <span class="badge text-bg-secondary" id="producto_nuevo"></span>
+    <span class="badge text-bg-secondary" id="contador_producto"></span>
+</button>
+
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal_2">
+  <i class='bx bxs-store text-warning'></i>
+</button>
 
   <div class="container">
     <div class="row" id="productos">
@@ -62,6 +70,34 @@
   </div>
 
 
+  <!-- Modal 2-->
+<div class="modal fade" id="exampleModal_2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Nuevo producto</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+
+        <label for="exampleFormControlInput1" class="form-label">Nombre del producto</label>
+        <input type="text" class="form-control border-primary-subtle" placeholder="Ingrese producto" id="nuevo_producto">
+        <label for="exampleFormControlInput1" class="form-label mt-3">Precio del producto</label>
+        <input type="text" class="form-control border-primary-subtle" placeholder="Ingrese precio" id="nuevo_precio">
+        <label for="exampleFormControlInput1" class="form-label mt-3">Imagen</label>
+        <input class="form-control border-primary-subtle mb-2" type="file" id="nueva_imagen" multiple>
+        <input type="text" class="form-control border-primary-subtle" placeholder="Copie la dirrección" id="nueva_imagen">
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+        <button onclick="crear_productoNuevo()" type="button" class="btn btn-primary">Guardar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script src="js/micodigo.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
