--- a/Inventario/index.html
+++ b/Inventario/index.html
@@ -29,6 +29,7 @@
 
             <div class="col-6">
                 <div class="row">
+                    <h5 class="titulo_nuevo bg-secondary text-bg-primary p-2 rounded-top">Producto nuevo</h3>
                         <div class="col-6">
                             <label for="floatingText" class="col-form-label">Producto</label>
                             <input type="text" placeholder="Ingrese producto" class="form-control border-primary" id="productoAgregado">
@@ -42,7 +43,8 @@
                         </div>
                 </div>  
                 
-                <div class="col-12 mt-3">
+                <div class="col-12 mt-4">
+                    <h5 class="titulo_modificar bg-secondary text-bg-primary p-2 rounded-top">Modificar producto</h5>
                     <div class="row">
                             <div class="col-6">
                                 <label for="floatingText" class="col-form-label">Producto</label>
